--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
 <script></script>
 <script src="https://kit.fontawesome.com/bd3ff733cf.js" crossorigin="anonymous"></script>
 <style></style>
-
+<head><meta property="og:image" content="https://i.imgur.com/0DiI6Yg.jpg">
+<meta property="og:image:type" content="png">
+<meta property="og:image:width" content="3072">
+<meta property="og:image:height" content="3072">
+<meta property="og:title" content="aVOCABo">
+<meta property="og:description" content="你的背單字好幫手"></head>
 <body>
   <meta content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no" id="viewport" name="viewport">
 
