--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEghBW-NDiuGpbY4H359BbdAjI5GC9NUXJme0ImQYdiPUKt34VTdjXNNOmKSmqF0Gp54OTVniwq5BUcHx4Reynvj5F56GgEa4-L3tIxoCwPLiW0lBVeJXtIS3ZclYXeeV4-_qRKSCO7lOGOYRR81zOjzQ1FrxN9pJ1uSVkfYqKC-XTZEZVIf8LxSLXVUdQ/w625-h627/%E8%9E%A2%E5%B9%95%E6%93%B7%E5%8F%96%E7%95%AB%E9%9D%A2%202023-05-28%20103709.png" alt="...">
+          <img src="https://i.imgur.com/0DiI6Yg.jpg" alt="...">
           <div class="carousel-caption d-md-block">
             <h5>aVOCABo</h5>
             <p>你的背單字小幫手</p>
