--- a/index.html
+++ b/index.html
@@ -8,16 +8,18 @@
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Lato&family=Noto+Sans+TC&display=swap');
 </style>
-<script></script>
-<script></script>
 <script src="https://kit.fontawesome.com/bd3ff733cf.js" crossorigin="anonymous"></script>
 <style></style>
-<head><meta property="og:image" content="https://i.imgur.com/0DiI6Yg.jpg">
-<meta property="og:image:type" content="png">
-<meta property="og:image:width" content="3072">
-<meta property="og:image:height" content="3072">
-<meta property="og:title" content="aVOCABo">
-<meta property="og:description" content="你的背單字好幫手"></head>
+
+<head>
+  <meta property="og:image" content="https://i.imgur.com/0DiI6Yg.jpg">
+  <meta property="og:image:type" content="png">
+  <meta property="og:image:width" content="3072">
+  <meta property="og:image:height" content="3072">
+  <meta property="og:title" content="aVOCABo">
+  <meta property="og:description" content="你的背單字好幫手">
+</head>
+
 <body>
   <meta content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no" id="viewport" name="viewport">
 
@@ -47,15 +49,15 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="https://i.imgur.com/0DiI6Yg.jpg" alt="...">
-          <div class="carousel-caption d-md-block">
+          <img src="https://i.imgur.com/DSwA9oI.jpg" alt="...">
+          <div class="carousel-caption d-md-block" style="color: #8C7672;">
             <h5>aVOCABo</h5>
             <p>你的背單字小幫手</p>
             <i class=" fa-brands fa-instagram"></i> @a.vocab.o
           </div>
         </div>
         <div class="carousel-item">
-          <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEghBW-NDiuGpbY4H359BbdAjI5GC9NUXJme0ImQYdiPUKt34VTdjXNNOmKSmqF0Gp54OTVniwq5BUcHx4Reynvj5F56GgEa4-L3tIxoCwPLiW0lBVeJXtIS3ZclYXeeV4-_qRKSCO7lOGOYRR81zOjzQ1FrxN9pJ1uSVkfYqKC-XTZEZVIf8LxSLXVUdQ/w625-h627/%E8%9E%A2%E5%B9%95%E6%93%B7%E5%8F%96%E7%95%AB%E9%9D%A2%202023-05-28%20103709.png" alt="...">
+          <img src="https://i.imgur.com/2g6KxSf.jpg" alt="...">
           <div class="carousel-caption d-md-block">
             <h5>aVOCABo</h5>
             <p>
@@ -65,7 +67,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEghBW-NDiuGpbY4H359BbdAjI5GC9NUXJme0ImQYdiPUKt34VTdjXNNOmKSmqF0Gp54OTVniwq5BUcHx4Reynvj5F56GgEa4-L3tIxoCwPLiW0lBVeJXtIS3ZclYXeeV4-_qRKSCO7lOGOYRR81zOjzQ1FrxN9pJ1uSVkfYqKC-XTZEZVIf8LxSLXVUdQ/w625-h627/%E8%9E%A2%E5%B9%95%E6%93%B7%E5%8F%96%E7%95%AB%E9%9D%A2%202023-05-28%20103709.png" alt="...">
+          <img src="https://i.imgur.com/2g6KxSf.jpg" alt="...">
           <div class="carousel-caption d-md-block">
             <h5>aVOCABo</h5>
             <p>出錯了嗎?填表單告訴我!<br><i class="fa-solid fa-link"> <a href="https://www.surveycake.com/s/wWM2o" target="_blank">錯誤回報</a>
