--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 </style>
 <script src="https://kit.fontawesome.com/bd3ff733cf.js" crossorigin="anonymous"></script>
 <style></style>
+<script src="https://kit.fontawesome.com/bd3ff733cf.js" crossorigin="anonymous"></script>
+<style></style>
 
 <head>
   <meta property="og:image" content="https://i.imgur.com/0DiI6Yg.jpg">
@@ -41,14 +43,14 @@
 
   <!-- 滑動介紹 -->
   <div class="car-container">
-    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
       </div>
       <div class="carousel-inner">
-        <div class="carousel-item active">
+        <div class="carousel-item active" data-bs-interval="3000">
           <img src="https://i.imgur.com/DSwA9oI.jpg" alt="...">
           <div class="carousel-caption d-md-block" style="color: #8C7672;">
             <h5>aVOCABo</h5>
@@ -56,7 +58,7 @@
             <i class=" fa-brands fa-instagram"></i> @a.vocab.o
           </div>
         </div>
-        <div class="carousel-item">
+        <div class="carousel-item" data-bs-interval="3000">
           <img src="https://i.imgur.com/2g6KxSf.jpg" alt="...">
           <div class="carousel-caption d-md-block">
             <h5>aVOCABo</h5>
@@ -66,7 +68,7 @@
             </p>
           </div>
         </div>
-        <div class="carousel-item">
+        <div class="carousel-item" data-bs-interval="3000">
           <img src="https://i.imgur.com/2g6KxSf.jpg" alt="...">
           <div class="carousel-caption d-md-block">
             <h5>aVOCABo</h5>
