--- a/index.html
+++ b/index.html
@@ -26,11 +26,13 @@
   <meta content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no" id="viewport" name="viewport">
 
   <!--標題列 -->
-  <nav class="navbar sticky-top">
-    <div class="container-fluid nav-title">
-      <p class="nav-word">🥑 a<word class="specialize">VOCAB</word>o</p>
-    </div>
-  </nav>
+  <a href="https://fantuannnn.github.io/aVOCABo/">
+    <nav class="navbar sticky-top">
+      <div class="container-fluid nav-title">
+        <p class="nav-word">🥑 a<word class="specialize">VOCAB</word>o</p>
+      </div>
+    </nav>
+  </a>
   <section class="newsbar">
     <marquee class="bar">
       <p class="card-text">
