--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <p class="card-text">
         <i class="fa-solid fa-bullhorn">
         </i>請尊重智慧財產權 測試期間 網址切勿私下轉傳&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<i class="fa-solid fa-bullhorn">
-        </i>Instagram: @a.vocab.o
+        </i>下波單字更新：課本L8、核心字彙Part2 U9~12 敬請期待！
       </p>
     </marquee>
   </section>
