--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     @import url('https://fonts.googleapis.com/css2?family=Lato&family=Noto+Sans+TC&display=swap');
 </style>
 <script src="https://kit.fontawesome.com/bd3ff733cf.js" crossorigin="anonymous"></script>
-<style></style>
 
 <head>
   <meta property="og:image" content="https://i.imgur.com/0DiI6Yg.jpg">
@@ -40,7 +39,7 @@
     <marquee class="bar">
       <p class="card-text">
         <i class="fa-solid fa-bullhorn">
-        </i>下波單字更新:核心字彙U9~12&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<i class="fa-solid fa-bullhorn">&emsp;<a href="https://www.surveycake.com/s/gl0xB" target="_blank">使用回饋</a>
+        </i>下波單字更新:核心字彙U9~12&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<i class="fa-solid fa-bullhorn"><a href="https://www.surveycake.com/s/gl0xB" target="_blank">使用回饋</a>
           <a href="https://www.surveycake.com/s/wWM2o" target="_blank">錯誤回報</a>
         </i>
       </p>
@@ -252,12 +251,20 @@
   <!--頁尾 -->
   <footer class="footer">
     <h3>🥑aVOCABo</h3>
-    <p>哈囉你好，我是aVOCABo的開發者，希望藉由這個網站解決高中生死記硬背英文單字的現象。</p>
+    <p>早安你好，我是aVOCABo的開發者，謝謝你使用aVOCABo。上了高中後面對海量的英文單字，許多人都是死記硬背，我希望這個網站能以更生動活潑的方式，帶著大家一起解決此現象。</p>
+    <p>設計理念-MAPP
+      <br>#MobileFirst 行動優先 | 有了手機，不管在等公車還是買晚餐都可以背單字
+      <br>#Assistance 協助 | 協助改善死背英文的問題
+      <br>#Platform 平臺 | 內有課本、核心字彙、Live雜誌的單字，一個整合所有需求的平臺
+      <br>#Practical 實際的 | 對高中生實際有幫助，不須付費、無廣告的網站
+    </p>
     <i class="fa-solid fa-link"> <a href="https://www.surveycake.com/s/gl0xB" target="_blank">使用回饋</a>
     </i>
     <i class="fa-solid fa-link"> <a href="https://www.surveycake.com/s/wWM2o" target="_blank">錯誤回報</a>
     </i>
-    <p>任何問題請洽 Instagram: @a.vocab.o</p>
+    <p>任何問題請從以上表單or到以下信箱反應:)
+      <br>mitryan8@gmail.com
+    </p>
     <img src="https://SiteStates.com/show/image/33508.jpg" border="0" />
   </footer>
 </body>
@@ -548,7 +555,6 @@ h3 {
   font-size: 1.8vh;
   opacity: 0.9;
 }
-
 </style>
 <script>
 //單字庫
