--- a/index.html
+++ b/index.html
@@ -872,7 +872,7 @@ const vobU6voc = [
   "(v.)更喜歡"
 ];
 const vobU7voc = [
-  "continously",
+  "continuously",
   "(adv.)持續不斷地",
   "barely",
   "(adv.)幾乎沒有地；緊緊；剛剛",
@@ -894,7 +894,7 @@ const vobU7voc = [
   "(v.)黏貼；附著在；插:(n.)棍子；枝條",
   "circular",
   "(adj.)圓形的",
-  "resistence",
+  "resistance",
   "(n.)抵抗力；阻力",
   "ease",
   "(v.)減輕；和緩:(n.)容易",
@@ -1487,5 +1487,6 @@ function fillIncorrectList(vocabList, title) {
       </li>`;
   }
 }
+
 
 </script>
