--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
   <section class="newsbar">
     <marquee class="bar">
       <p class="card-text">
+        <i class="fa-solid fa-triangle-exclamation"></i>緊急勘誤：continuously(adv.)持續不斷地、resistance(n.)抵抗力；阻力
         <i class="fa-solid fa-bullhorn">
         </i>下波單字更新:核心字彙U9~12&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<i class="fa-solid fa-bullhorn"><a href="https://www.surveycake.com/s/gl0xB" target="_blank">使用回饋</a>
           <a href="https://www.surveycake.com/s/wWM2o" target="_blank">錯誤回報</a>
@@ -119,7 +120,7 @@
       <div class="card card-vocbook">
         <h5 class="card-header">核心字彙</h5>
         <div class="card-body">
-          <p class="card-text">已更新至U7</p>
+          <p class="card-text">已更新至U6</p>
           <div class="btn-group">
             <button class="btn btn-outline-dark dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
               核心字彙 </button>
