--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <section class="newsbar">
     <marquee class="bar">
       <p class="card-text">
-        <i class="fa-solid fa-triangle-exclamation"></i>緊急勘誤：continuously(adv.)持續不斷地、resistance(n.)抵抗力；阻力&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+        <i class="fa-solid fa-triangle-exclamation"></i>緊急勘誤：continuously(adv.)持續不斷地、resistance(n.)抵抗力；阻力、help out (phr.)幫忙&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
         <i class="fa-solid fa-bullhorn">
         </i>下波單字更新:核心字彙U9~12&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<i class="fa-solid fa-bullhorn"><a href="https://www.surveycake.com/s/gl0xB" target="_blank">使用回饋</a>
           <a href="https://www.surveycake.com/s/wWM2o" target="_blank">錯誤回報</a>
@@ -711,7 +711,7 @@ const tebL8voc = [
   "(phr.)舉行；發生",
   "come about",
   "(phr.)發生",
-  "help about",
+  "help out",
   "(phr.)幫忙",
   "hand out",
   "(phr.)發放",
