--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <p class="card-text">
         <i class="fa-solid fa-triangle-exclamation"></i>緊急勘誤：continuously(adv.)持續不斷地、resistance(n.)抵抗力；阻力、help out (phr.)幫忙&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
         <i class="fa-solid fa-bullhorn">
-        </i>下波單字更新:核心字彙U9~12&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<i class="fa-solid fa-bullhorn"><a href="https://www.surveycake.com/s/gl0xB" target="_blank">使用回饋</a>
+        </i>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<i class="fa-solid fa-bullhorn"><a href="https://www.surveycake.com/s/gl0xB" target="_blank">使用回饋</a>
           <a href="https://www.surveycake.com/s/wWM2o" target="_blank">錯誤回報</a>
         </i>
       </p>
